--- a/translator/templates/translator/index.html
+++ b/translator/templates/translator/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title> GloboLingo</title>
+    <title> GloboLingoo</title>
    
     <!-- Select2 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/css/select2.min.css" rel="stylesheet" />
@@ -18,7 +18,7 @@
     </style>
 </head>
 <body>
-    <h1>🌍 GlobooLingoo</h1>
+    <h1>🌍 GloboLingoo</h1>
 
     {% if error_message %}
         <div class="error">{{ error_message }}</div>
